# mybin

./: README.md  setup.cfg
src/mybin/: backup.py  cite2bib.py  md2pdf  mymarp.py  youtube  youtube.py
