[metadata]
name = mybin
version = 0.0.1
author = Daniel Migault
author_email = mglt.biz@gmail.com
description = "Scripts I am using"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mglt/mybin
project_urls =
    Bug Tracker = https://github.com/mglt/mybin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.8

#include_package_data=True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    backup-desktop = mybin.backup:backup_desktop
    backup-nas-veracrypt = mybin.backup:backup_nas_veracrypt
    backup-nas-hd = mybin.backup:backup_nas_hd
    marp = mybin.mymarp:cli
    cite2bib = mybin.cite2bib:BibtexFile 
    ytd = mybin.youtube:ytd_cli
